# Bristol-671

./: README.md  pyproject.toml  setup.py
bristol671/: __init__.py  conversion_handling.py  error_codes.py  module.py  registers.py  selection_enums.py
bristol_671/: __init__.py  conversion_handling.py  error_codes.py  exceptions.py  module.py  registers.py
tests/: test_conversion_and_registers.py  test_module_api.py
