[project]
name = "bristol-671"
version = "0.2.0"
description = "Python interface for the Bristol 671 wavelength meter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
dependencies = [
    "easy-scpi>=0.1.4,<0.2.0",
    "pint>=0.24,<1.0",
]

[project.urls]
Homepage = "https://github.com/ograsdijk/Bristol-671"
Repository = "https://github.com/ograsdijk/Bristol-671"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bristol_671"]

[tool.hatch.build.targets.wheel.force-include]
"bristol_671/py.typed" = "bristol_671/py.typed"

[tool.uv]
package = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "easy_scpi",
    "pint.*",
]
ignore_missing_imports = true